@@ -26,6 +26,7 @@ dependencies {
     testImplementation 'org.apache.commons:commons-lang3:3.3.2'
     testImplementation 'org.slf4j:slf4j-api:1.7.5'
     testImplementation 'org.projectlombok:lombok:1.18.12'
+    testImplementation 'jakarta.validation:jakarta.validation-api:2.0.2'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
     
     compileOnly 'org.projectlombok:lombok:1.18.12'
@@ -74,10 +75,12 @@ publishing {
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+    options.compilerArgs.add('--enable-preview') 
 }
 
 test {
     useTestNG()
+    jvmArgs(['--enable-preview'])
     finalizedBy jacocoTestReport
 }
 
